--- a/index.html
+++ b/index.html
@@ -1,6 +1,162 @@
 Welcome Here ❤️<br />This link:- https://hosttf.github.io/hosttf/<br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
-&lt;link rel="stylesheet"
-href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"&gt; in
-&lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style classes with
-font-family: 'HosTTF-Regular'<br /><br />&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />Online
-Links:-<br />https://hosttf.github.io/Font_regularwater.ttf<br />https://hosttf.github.io/Font_regularitalic.ttf<br />https://hosttf.github.io/Font_regular.ttf<br />https://hosttf.github.io/Font_mediumneonwhite.ttf<br />https://hosttf.github.io/Font_mediumneonblack.ttf<br />https://hosttf.github.io/Font_mediumcube.ttf<br />https://hosttf.github.io/Font_lightitalic.ttf<br />https://hosttf.github.io/Font_light.ttf<br />https://hosttf.github.io/Font_boldshadow.ttf<br />https://hosttf.github.io/Font_boldoutline.ttf<br />https://hosttf.github.io/Font_bolditalic.ttf<br />https://hosttf.github.io/Font_boldgraphy.ttf<br />https://hosttf.github.io/Font_blod.ttf<br />https://hosttf.github.io/Font_blackitalic.ttf<br />https://hosttf.github.io/Font_black.ttf<br />------------------------------------------------------------------<br />https://hosttf.github.io/Font_regularwater.otf<br />https://hosttf.github.io/Font_regularitalic.otf<br />https://hosttf.github.io/Font_regular.otf<br />https://hosttf.github.io/Font_mediumneonwhite.otf<br />https://hosttf.github.io/Font_mediumneonblack.otf<br />https://hosttf.github.io/Font_mediumcube.otf<br />https://hosttf.github.io/Font_lightitalic.otf<br />https://hosttf.github.io/Font_light.otf<br />https://hosttf.github.io/Font_boldshadow.otf<br />https://hosttf.github.io/Font_boldoutline.otf<br />https://hosttf.github.io/Font_bolditalic.otf<br />https://hosttf.github.io/Font_boldgraphy.otf<br />https://hosttf.github.io/Font_blod.otf<br />https://hosttf.github.io/Font_blackitalic.otf<br />https://hosttf.github.io/Font_black.otf<br />------------------------------------------------------------------<br />https://hosttf.github.io/Font_regularwater.woff<br />https://hosttf.github.io/Font_regularitalic.woff<br />https://hosttf.github.io/Font_regular.woff<br />https://hosttf.github.io/Font_mediumneonwhite.woff<br />https://hosttf.github.io/Font_mediumneonblack.woff<br />https://hosttf.github.io/Font_mediumcube.woff<br />https://hosttf.github.io/Font_lightitalic.woff<br />https://hosttf.github.io/Font_light.woff<br />https://hosttf.github.io/Font_boldshadow.woff<br />https://hosttf.github.io/Font_boldoutline.woff<br />https://hosttf.github.io/Font_bolditalic.woff<br />https://hosttf.github.io/Font_boldgraphy.woff<br />https://hosttf.github.io/Font_blod.woff<br />https://hosttf.github.io/Font_blackitalic.woff<br />https://hosttf.github.io/Font_black.woff<br />------------------------------------------------------------------<br />https://hosttf.github.io/Font_regularwater.woff2<br />https://hosttf.github.io/Font_regularitalic.woff2<br />https://hosttf.github.io/Font_regular.woff2<br />https://hosttf.github.io/Font_mediumneonwhite.woff2<br />https://hosttf.github.io/Font_mediumneonblack.woff2<br />https://hosttf.github.io/Font_mediumcube.woff2<br />https://hosttf.github.io/Font_lightitalic.woff2<br />https://hosttf.github.io/Font_light.woff2<br />https://hosttf.github.io/Font_boldshadow.woff2<br />https://hosttf.github.io/Font_boldoutline.woff2<br />https://hosttf.github.io/Font_bolditalic.woff2<br />https://hosttf.github.io/Font_boldgraphy.woff2<br />https://hosttf.github.io/Font_blod.woff2<br />https://hosttf.github.io/Font_blackitalic.woff2<br />https://hosttf.github.io/Font_black.woff2<br />------------------------------------------------------------------<br />https://hosttf.github.io/Font_regularwater.eot<br />https://hosttf.github.io/Font_regularitalic.eot<br />https://hosttf.github.io/Font_regular.eot<br />https://hosttf.github.io/Font_mediumneonwhite.eot<br />https://hosttf.github.io/Font_mediumneonblack.eot<br />https://hosttf.github.io/Font_mediumcube.eot<br />https://hosttf.github.io/Font_lightitalic.eot<br />https://hosttf.github.io/Font_light.eot<br />https://hosttf.github.io/Font_boldshadow.eot<br />https://hosttf.github.io/Font_boldoutline.eot<br />https://hosttf.github.io/Font_bolditalic.eot<br />https://hosttf.github.io/Font_boldgraphy.eot<br />https://hosttf.github.io/Font_blod.eot<br />https://hosttf.github.io/Font_blackitalic.eot<br />https://hosttf.github.io/Font_black.eot <br />
+&lt;link rel="stylesheet" href="<a
+  href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"
+  >https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css</a
+>"&gt; in &lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style
+classes with font-family: 'HosTTF-Regular'<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;<br />Online Links:-<br /><a
+  href="https://hosttf.github.io/Font_regularwater.ttf"
+  >https://hosttf.github.io/Font_regularwater.ttf</a
+><br /><a href="https://hosttf.github.io/Font_regularitalic.ttf"
+  >https://hosttf.github.io/Font_regularitalic.ttf</a
+><br /><a href="https://hosttf.github.io/Font_regular.ttf"
+  >https://hosttf.github.io/Font_regular.ttf</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonwhite.ttf"
+  >https://hosttf.github.io/Font_mediumneonwhite.ttf</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonblack.ttf"
+  >https://hosttf.github.io/Font_mediumneonblack.ttf</a
+><br /><a href="https://hosttf.github.io/Font_mediumcube.ttf"
+  >https://hosttf.github.io/Font_mediumcube.ttf</a
+><br /><a href="https://hosttf.github.io/Font_lightitalic.ttf"
+  >https://hosttf.github.io/Font_lightitalic.ttf</a
+><br /><a href="https://hosttf.github.io/Font_light.ttf"
+  >https://hosttf.github.io/Font_light.ttf</a
+><br /><a href="https://hosttf.github.io/Font_boldshadow.ttf"
+  >https://hosttf.github.io/Font_boldshadow.ttf</a
+><br /><a href="https://hosttf.github.io/Font_boldoutline.ttf"
+  >https://hosttf.github.io/Font_boldoutline.ttf</a
+><br /><a href="https://hosttf.github.io/Font_bolditalic.ttf"
+  >https://hosttf.github.io/Font_bolditalic.ttf</a
+><br /><a href="https://hosttf.github.io/Font_boldgraphy.ttf"
+  >https://hosttf.github.io/Font_boldgraphy.ttf</a
+><br /><a href="https://hosttf.github.io/Font_blod.ttf"
+  >https://hosttf.github.io/Font_blod.ttf</a
+><br /><a href="https://hosttf.github.io/Font_blackitalic.ttf"
+  >https://hosttf.github.io/Font_blackitalic.ttf</a
+><br /><a href="https://hosttf.github.io/Font_black.ttf"
+  >https://hosttf.github.io/Font_black.ttf</a
+><br />------------------------------------------------------------------<br /><a
+  href="https://hosttf.github.io/Font_regularwater.otf"
+  >https://hosttf.github.io/Font_regularwater.otf</a
+><br /><a href="https://hosttf.github.io/Font_regularitalic.otf"
+  >https://hosttf.github.io/Font_regularitalic.otf</a
+><br /><a href="https://hosttf.github.io/Font_regular.otf"
+  >https://hosttf.github.io/Font_regular.otf</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonwhite.otf"
+  >https://hosttf.github.io/Font_mediumneonwhite.otf</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonblack.otf"
+  >https://hosttf.github.io/Font_mediumneonblack.otf</a
+><br /><a href="https://hosttf.github.io/Font_mediumcube.otf"
+  >https://hosttf.github.io/Font_mediumcube.otf</a
+><br /><a href="https://hosttf.github.io/Font_lightitalic.otf"
+  >https://hosttf.github.io/Font_lightitalic.otf</a
+><br /><a href="https://hosttf.github.io/Font_light.otf"
+  >https://hosttf.github.io/Font_light.otf</a
+><br /><a href="https://hosttf.github.io/Font_boldshadow.otf"
+  >https://hosttf.github.io/Font_boldshadow.otf</a
+><br /><a href="https://hosttf.github.io/Font_boldoutline.otf"
+  >https://hosttf.github.io/Font_boldoutline.otf</a
+><br /><a href="https://hosttf.github.io/Font_bolditalic.otf"
+  >https://hosttf.github.io/Font_bolditalic.otf</a
+><br /><a href="https://hosttf.github.io/Font_boldgraphy.otf"
+  >https://hosttf.github.io/Font_boldgraphy.otf</a
+><br /><a href="https://hosttf.github.io/Font_blod.otf"
+  >https://hosttf.github.io/Font_blod.otf</a
+><br /><a href="https://hosttf.github.io/Font_blackitalic.otf"
+  >https://hosttf.github.io/Font_blackitalic.otf</a
+><br /><a href="https://hosttf.github.io/Font_black.otf"
+  >https://hosttf.github.io/Font_black.otf</a
+><br />------------------------------------------------------------------<br /><a
+  href="https://hosttf.github.io/Font_regularwater.woff"
+  >https://hosttf.github.io/Font_regularwater.woff</a
+><br /><a href="https://hosttf.github.io/Font_regularitalic.woff"
+  >https://hosttf.github.io/Font_regularitalic.woff</a
+><br /><a href="https://hosttf.github.io/Font_regular.woff"
+  >https://hosttf.github.io/Font_regular.woff</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonwhite.woff"
+  >https://hosttf.github.io/Font_mediumneonwhite.woff</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonblack.woff"
+  >https://hosttf.github.io/Font_mediumneonblack.woff</a
+><br /><a href="https://hosttf.github.io/Font_mediumcube.woff"
+  >https://hosttf.github.io/Font_mediumcube.woff</a
+><br /><a href="https://hosttf.github.io/Font_lightitalic.woff"
+  >https://hosttf.github.io/Font_lightitalic.woff</a
+><br /><a href="https://hosttf.github.io/Font_light.woff"
+  >https://hosttf.github.io/Font_light.woff</a
+><br /><a href="https://hosttf.github.io/Font_boldshadow.woff"
+  >https://hosttf.github.io/Font_boldshadow.woff</a
+><br /><a href="https://hosttf.github.io/Font_boldoutline.woff"
+  >https://hosttf.github.io/Font_boldoutline.woff</a
+><br /><a href="https://hosttf.github.io/Font_bolditalic.woff"
+  >https://hosttf.github.io/Font_bolditalic.woff</a
+><br /><a href="https://hosttf.github.io/Font_boldgraphy.woff"
+  >https://hosttf.github.io/Font_boldgraphy.woff</a
+><br /><a href="https://hosttf.github.io/Font_blod.woff"
+  >https://hosttf.github.io/Font_blod.woff</a
+><br /><a href="https://hosttf.github.io/Font_blackitalic.woff"
+  >https://hosttf.github.io/Font_blackitalic.woff</a
+><br /><a href="https://hosttf.github.io/Font_black.woff"
+  >https://hosttf.github.io/Font_black.woff</a
+><br />------------------------------------------------------------------<br /><a
+  href="https://hosttf.github.io/Font_regularwater.woff2"
+  >https://hosttf.github.io/Font_regularwater.woff2</a
+><br /><a href="https://hosttf.github.io/Font_regularitalic.woff2"
+  >https://hosttf.github.io/Font_regularitalic.woff2</a
+><br /><a href="https://hosttf.github.io/Font_regular.woff2"
+  >https://hosttf.github.io/Font_regular.woff2</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonwhite.woff2"
+  >https://hosttf.github.io/Font_mediumneonwhite.woff2</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonblack.woff2"
+  >https://hosttf.github.io/Font_mediumneonblack.woff2</a
+><br /><a href="https://hosttf.github.io/Font_mediumcube.woff2"
+  >https://hosttf.github.io/Font_mediumcube.woff2</a
+><br /><a href="https://hosttf.github.io/Font_lightitalic.woff2"
+  >https://hosttf.github.io/Font_lightitalic.woff2</a
+><br /><a href="https://hosttf.github.io/Font_light.woff2"
+  >https://hosttf.github.io/Font_light.woff2</a
+><br /><a href="https://hosttf.github.io/Font_boldshadow.woff2"
+  >https://hosttf.github.io/Font_boldshadow.woff2</a
+><br /><a href="https://hosttf.github.io/Font_boldoutline.woff2"
+  >https://hosttf.github.io/Font_boldoutline.woff2</a
+><br /><a href="https://hosttf.github.io/Font_bolditalic.woff2"
+  >https://hosttf.github.io/Font_bolditalic.woff2</a
+><br /><a href="https://hosttf.github.io/Font_boldgraphy.woff2"
+  >https://hosttf.github.io/Font_boldgraphy.woff2</a
+><br /><a href="https://hosttf.github.io/Font_blod.woff2"
+  >https://hosttf.github.io/Font_blod.woff2</a
+><br /><a href="https://hosttf.github.io/Font_blackitalic.woff2"
+  >https://hosttf.github.io/Font_blackitalic.woff2</a
+><br /><a href="https://hosttf.github.io/Font_black.woff2"
+  >https://hosttf.github.io/Font_black.woff2</a
+><br />------------------------------------------------------------------<br /><a
+  href="https://hosttf.github.io/Font_regularwater.eot"
+  >https://hosttf.github.io/Font_regularwater.eot</a
+><br /><a href="https://hosttf.github.io/Font_regularitalic.eot"
+  >https://hosttf.github.io/Font_regularitalic.eot</a
+><br /><a href="https://hosttf.github.io/Font_regular.eot"
+  >https://hosttf.github.io/Font_regular.eot</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonwhite.eot"
+  >https://hosttf.github.io/Font_mediumneonwhite.eot</a
+><br /><a href="https://hosttf.github.io/Font_mediumneonblack.eot"
+  >https://hosttf.github.io/Font_mediumneonblack.eot</a
+><br /><a href="https://hosttf.github.io/Font_mediumcube.eot"
+  >https://hosttf.github.io/Font_mediumcube.eot</a
+><br /><a href="https://hosttf.github.io/Font_lightitalic.eot"
+  >https://hosttf.github.io/Font_lightitalic.eot</a
+><br /><a href="https://hosttf.github.io/Font_light.eot"
+  >https://hosttf.github.io/Font_light.eot</a
+><br /><a href="https://hosttf.github.io/Font_boldshadow.eot"
+  >https://hosttf.github.io/Font_boldshadow.eot</a
+><br /><a href="https://hosttf.github.io/Font_boldoutline.eot"
+  >https://hosttf.github.io/Font_boldoutline.eot</a
+><br /><a href="https://hosttf.github.io/Font_bolditalic.eot"
+  >https://hosttf.github.io/Font_bolditalic.eot</a
+><br /><a href="https://hosttf.github.io/Font_boldgraphy.eot"
+  >https://hosttf.github.io/Font_boldgraphy.eot</a
+><br /><a href="https://hosttf.github.io/Font_blod.eot"
+  >https://hosttf.github.io/Font_blod.eot</a
+><br /><a href="https://hosttf.github.io/Font_blackitalic.eot"
+  >https://hosttf.github.io/Font_blackitalic.eot</a
+><br /><a href="https://hosttf.github.io/Font_black.eot "
+  >https://hosttf.github.io/Font_black.eot </a
+><br />
