--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Welcome Here ❤️<br />This link:- https://hosttf.github.io/hosttf/<br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
 &lt;link rel="stylesheet" href="<a
-  href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"
+  href="https://hosttf.github.io/index.min.css"
   >https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css</a
 >"&gt; in &lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style
 classes with font-family: 'HosTTF-Regular'<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
