--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
-Welcome Here ❤️<br />This link:- <a href="https://hosttf.github.io/hosttf/">https://hosttf.github.io/hosttf/</a><br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
-&lt;link rel="stylesheet" href="<a href="https://hosttf.github.io/index.min.css"
-  >https://hosttf.github.io/index.min.css</a
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://hosttf.github.io/index.min.css">
+<style>
+body {
+  font-family: "HosTTF-Bold";
+  font-size:20px;
+  line-height:33px;
+}
+</style>
+</head>
+<body>
+
+
+Welcome Here ❤️<br /><a href="https://hosttf.github.io/hosttf/">https://hosttf.github.io/hosttf/</a><br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
+&lt;link rel="stylesheet" href="<a
+  href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"
+  >https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css</a
 >"&gt; in &lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style
-classes with font-family: 'HosTTF-Regular'<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
+classes with font-family: 'HosTTF-Regular' and <br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;<br />Online Links:-<br /><a
   href="https://hosttf.github.io/Font_regularwater.ttf"
   >https://hosttf.github.io/Font_regularwater.ttf</a
@@ -159,3 +175,5 @@ classes with font-family: 'HosTTF-Regular'<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
 ><br /><a href="https://hosttf.github.io/Font_black.eot "
   >https://hosttf.github.io/Font_black.eot </a
 ><br />
+</body>
+</html>
