--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"
       >https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css</a
     >"&gt; in &lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style
-    classes with font-family: 'HosTTF-Regular' and
+    classes with font-family: 'HosTTF-Regular' and  font-size:20px;
+  line-height:33px;
     <br /><br />&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />Online Links:-<br /><a
       href="https://hosttf.github.io/All%20Fromats.rar"
       >Download ALL Formats</a
