--- a/index.html
+++ b/index.html
@@ -178,5 +178,14 @@
     ><br /><a href="https://hosttf.github.io/Font_black.eot "
       >https://hosttf.github.io/Font_black.eot </a
     ><br />
+    <a> All CopyRights Reserved &copy; 2015-<script>document.write(new Date().getFullYear())</script></a> <a href="https://tapmybio.com/h0smed" target="_blank">Hassan Ahmed</a>
+    <div style ="position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;
+background: url(&#39;https://1.bp.blogspot.com/-LUdQWi-4MSQ/YKwCCyS890I/AAAAAAAABy8/nxLp05ZcG-Y02szYSpHHD7CbfotjqgpbgCLcBGAsYHQ/s0/HosLoadingWait.gif&#39;) 50% 50% no-repeat rgb(249,249,249);" class="loader"/>
+<!-- Loading Wait --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(window).load(function() {
+    $(".loader").fadeOut("slow");
+})
+</script>  
   </body>
 </html>
