--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0' name='viewport'/>
     <link rel="stylesheet" href="https://hosttf.github.io/index.min.css" />
     <style>
       body {
@@ -10,6 +11,7 @@
       }
     </style>
   </head>
+  <title>HosTTF Links Not All Website</title>
   <body>
     Welcome Here ❤️<br />Link is Here :-<a href="https://hosttf.github.io/hosttf/"
       >https://hosttf.github.io/hosttf/</a
