--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <meta http-equiv = "refresh" content = "60; url = https://hosttf.github.io/hosttf" />
+<meta content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0' name='viewport'/>
 <link rel="stylesheet" href="https://hosttf.github.io/index.min.css">
 <style>
-@media screen and (max-width: 1200px) { body {
-  font-family: "HosTTF-Bold";
-  font-size:30px;
-  line-height:33px;
-}}
-@media screen and (max-width: 600px) { body {
+body {
   font-family: "HosTTF-Bold";
   font-size:20px;
   line-height:33px;
-}}
-@media screen and (max-width: 400px) { body {
-  font-family: "HosTTF-Bold";
-  font-size:10px;
-  line-height:33px;
-}}
+}
 </style>
 </head>
 <body>
 
 
-Welcome Here ❤️<br /><a href="https://hosttf.github.io/hosttf/">https://hosttf.github.io/hosttf/</a><br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
+Welcome Here ❤️<br />Link is Here<a href="https://hosttf.github.io/hosttf/">https://hosttf.github.io/hosttf/</a><br />
+"Redirect automatically after 60Sec"
+<br /><br />Types:-<br />HosTTF-Regular<br />HosTTF-Italic<br />HosTTF-Bold<br />HosTTF-BoldItalic<br /><br /><br />&nbsp;&nbsp;&nbsp;
 &lt;link rel="stylesheet" href="<a
   href="https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css"
   >https://raw.githubusercontent.com/HosTTF/hosttf/HosTTFPage/css/index.min.css</a
 >"&gt; in &lt;head&gt; or top of &lt;body&gt;<br />&nbsp;&nbsp;&nbsp; Style
-classes with font-family: 'HosTTF-Regular' and <br /><br />&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;<br />Online Links:-<br /><a
+classes with font-family: 'HosTTF-Regular' and font-size:20px;
+  line-height:33px;<br />
+  <br>
+  <br>Online Links:-<br /><a
   href="https://hosttf.github.io/All%20Fromats.rar"
   >Download ALL Formats</a
 ><br /><a
@@ -188,5 +184,15 @@ classes with font-family: 'HosTTF-Regular' and <br /><br />&nbsp;&nbsp;&nbsp;&nb
 ><br /><a href="https://hosttf.github.io/Font_black.eot "
   >https://hosttf.github.io/Font_black.eot </a
 ><br />
+<br>
+<a> All CopyRights Reserved &copy; 2015-<script>document.write(new Date().getFullYear())</script></a> <a href="https://tapmybio.com/h0smed" target="_blank">Hassan Ahmed</a>
+<div style ="position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;
+background: url(&#39;https://1.bp.blogspot.com/-LUdQWi-4MSQ/YKwCCyS890I/AAAAAAAABy8/nxLp05ZcG-Y02szYSpHHD7CbfotjqgpbgCLcBGAsYHQ/s0/HosLoadingWait.gif&#39;) 50% 50% no-repeat rgb(249,249,249);" class="loader"/>
+<!-- Loading Wait --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(window).load(function() {
+    $(".loader").fadeOut("slow");
+})
+</script>  
 </body>
 </html>
